--- a/Mail/src/main/resources/application.properties
+++ b/Mail/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+spring.datasource.url = jdbc:mysql://localhost:3306/osa?useSSL=false
+spring.datasource.username = root
+spring.datasource.password = root
 
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+
+spring.jpa.hibernate.ddl-auto = create
+
+logging.level.org.hibernate.SQL=DEBUG
