--- a/Mail/src/main/resources/application.properties
+++ b/Mail/src/main/resources/application.properties
@@ -7,3 +7,4 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDial
 spring.jpa.hibernate.ddl-auto = create
 
 logging.level.org.hibernate.SQL=DEBUG
+spring.jpa.properties.hibernate.globally_quoted_identifiers=true
